# aoc-2020-rust

./: Cargo.toml
src/: util.rs
src/day03/: day03.rs  part1.rs  part2.rs
src/day05/: main.rs
src/day06/: main.rs
src/day07/: main.rs
src/day08/: main.rs
src/day09/: main.rs
src/day10/: main.rs
src/day11/: main.rs
src/day12/: main.rs
src/day13/: main.rs
src/day14/: main.rs
src/day15/: main.rs
src/day16/: main.rs
src/day17/: main.rs
src/day18/: main.rs
src/day19/: main.rs
src/dayXX/: main.rs
src/util/: bench.rs  bitset.rs  parser.rs
