[package]
name = "aoc-2020-rust"
version = "0.1.0"
authors = ["Peter van Dommelen <pvandommelen@users.noreply.github.com>"]
edition = "2018"

[[bin]]
name = "day03-1"
path = "src/day03/part1.rs"

[[bin]]
name = "day03-2"
path = "src/day03/part2.rs"

[[bin]]
name = "day05"
path = "src/day05/main.rs"

[[bin]]
name = "day06"
path = "src/day06/main.rs"

[[bin]]
name = "day07"
path = "src/day07/main.rs"

[[bin]]
name = "day08"
path = "src/day08/main.rs"

[[bin]]
name = "day09"
path = "src/day09/main.rs"

[[bin]]
name = "day10"
path = "src/day10/main.rs"

[[bin]]
name = "day11"
path = "src/day11/main.rs"

[[bin]]
name = "day12"
path = "src/day12/main.rs"

[[bin]]
name = "day13"
path = "src/day13/main.rs"

[[bin]]
name = "day14"
path = "src/day14/main.rs"

[[bin]]
name = "day15"
path = "src/day15/main.rs"

[[bin]]
name = "day16"
path = "src/day16/main.rs"

[dependencies.nom]
version = "^6"